--- a/index.html
+++ b/index.html
@@ -10,25 +10,77 @@
     <div class="mode-selection-menu">
         <div class="menu-content">
             <h2>Select Game Mode</h2>
-            <button id="localMode" class="control-button">Local (Hotseat)</button>
-            <button id="aiMode" class="control-button">Play vs AI</button>
-            <button id="multiPlayerMode" class="control-button" disabled style="opacity: 0.6; cursor: not-allowed;">Online Multiplayer (Coming Soon)</button>
+            <div class="game-modes">
+                <button id="newGameBtn" class="control-button">Local</button>
+                <button id="multiPlayerMode" class="control-button" disabled style="opacity: 0.6; cursor: not-allowed;">Online Multiplayer (Coming Soon)</button>
+            </div>
+            <div class="game-description">
+                <h2>About the Game</h2>
+                <p>Welcome to this unique chess variant! Each player starts with 5 pieces:</p>
+                <ul>
+                    <li>1 King (on the edge)</li>
+                    <li>2 Random pieces (rook, knight, bishop, or queen) on the edge</li>
+                    <li>2 Pawns positioned in front of other pieces</li>
+                </ul>
+                <p>Game Rules:</p>
+                <ul>
+                    <li>Players get 3 moves per turn</li>
+                    <li>Unused moves carry over to your next turn (max = number of your pieces)</li>
+                    <li>Pieces have limited vision range in fog of war</li>
+                    <li>Capture goodie huts to gain new pieces</li>
+                    <li>Eliminate other players by capturing their king</li>
+                </ul>
+            </div>
         </div>
     </div>
 
     <div class="ai-setup-menu" style="display: none;">
         <div class="menu-content">
-            <h2>AI Game Setup</h2>
+            <h2>Game Setup</h2>
             <div class="setup-options">
-                <label for="aiPlayerCount">Number of AI Players:</label>
-                <select id="aiPlayerCount">
-                    <option value="1" selected>1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                </select>
+                <div class="player-count-section">
+                    <label for="totalPlayerCount">Total Players:</label>
+                    <select id="totalPlayerCount">
+                        <option value="2">2 Players</option>
+                        <option value="3">3 Players</option>
+                        <option value="4" selected>4 Players</option>
+                    </select>
+                </div>
+                <div class="player-setup-section">
+                    <div class="player-type" id="player1Setup">
+                        <label>Player 1:</label>
+                        <select id="player1Type">
+                            <option value="human">Human</option>
+                            <option value="ai">AI</option>
+                        </select>
+                    </div>
+                    <div class="player-type" id="player2Setup">
+                        <label>Player 2:</label>
+                        <select id="player2Type">
+                            <option value="human">Human</option>
+                            <option value="ai">AI</option>
+                        </select>
+                    </div>
+                    <div class="player-type" id="player3Setup">
+                        <label>Player 3:</label>
+                        <select id="player3Type">
+                            <option value="human">Human</option>
+                            <option value="ai">AI</option>
+                        </select>
+                    </div>
+                    <div class="player-type" id="player4Setup">
+                        <label>Player 4:</label>
+                        <select id="player4Type">
+                            <option value="human">Human</option>
+                            <option value="ai">AI</option>
+                        </select>
+                    </div>
+                </div>
             </div>
-            <button id="startAiGame" class="control-button">Start Game</button>
-            <button id="backFromAiSetup" class="control-button">Back</button>
+            <div class="button-group">
+                <button id="startGameSetup" class="control-button">Start Game</button>
+                <button id="backFromSetup" class="control-button">Back</button>
+            </div>
         </div>
     </div>
 
@@ -48,7 +100,7 @@
             <div class="room-info" style="display: none;">
                 <h3>Room: <span id="currentRoom"></span></h3>
                 <div id="playerList"></div>
-                <button id="startOnlineGame" class="control-button" disabled>Start Game</button>
+                <button id="startOnlineGame" class="control-button disabled">Start Game</button>
                 <button id="leaveRoom" class="control-button">Leave Room</button>
             </div>
         </div>
@@ -59,6 +111,7 @@
             <div class="turn-indicator white">Current Turn: White</div>
             <div class="controls-container">
                 <div class="setup-controls">
+                    <button id="backToMenu" class="control-button">Back to Menu</button>
                     <label for="playerCount">Players:</label>
                     <select id="playerCount">
                         <option value="2" selected>2</option>
@@ -75,23 +128,6 @@
             </div>
         </div>
         <div class="chessboard"></div>
-        <div class="game-description">
-            <h2>About the Game</h2>
-            <p>Welcome to this unique chess variant! Each player starts with 5 pieces:</p>
-            <ul>
-                <li>1 King (on the edge)</li>
-                <li>2 Random pieces (rook, knight, bishop, or queen) on the edge</li>
-                <li>2 Pawns positioned in front of other pieces</li>
-            </ul>
-            <p>Game Rules:</p>
-            <ul>
-                <li>Players get 3 moves per turn</li>
-                <li>Unused moves carry over to your next turn (max = number of your pieces)</li>
-                <li>Pieces have limited vision range in fog of war</li>
-                <li>Capture goodie huts to gain new pieces</li>
-                <li>Eliminate other players by capturing their king</li>
-            </ul>
-        </div>
     </div>
 
     <!-- Audio elements -->
@@ -115,24 +151,5 @@
     </audio>
 
     <script type="module" src="src/js/script.js"></script>
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-analytics.js";
-        import { getDatabase } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-database.js";
-        import { getAuth } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
-        import { firebaseConfig } from "./src/config/firebase.config.js";
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-        const database = getDatabase(app);
-        const auth = getAuth(app);
-
-        // Make Firebase instances available globally
-        window.firebaseApp = app;
-        window.firebaseDatabase = database;
-        window.firebaseAuth = auth;
-    </script>
 </body>
 </html>
